src/styles/photoDetails.css
.photo-data-display {
    display: flex;
    margin-left: -8px;
}

.title-and-photo {
    display: flex;
    width: fit-content;
    height: fit-content;
    background-color: rgba(0, 0, 0, 0.267);
    padding: 20px 20px 20px 60px;                                                                                                                                                              
    border-radius: 0px 5px 5px 0px;
}

.photo-title {
    font-family: "Orbitron", system-ui;
    font-size: 2rem;
    writing-mode: vertical-lr;
    transform: rotate(180deg);
    color: rgba(0, 0, 0, 0.5);
    padding-left: 10px;
}

.exif {
    font-family: "Quicksand", system-ui;
}

.exif-symbol-group {
    display: flex;
    flex-direction: row;
}

.exif-symbols {
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 1.5rem;
    margin: 0.15rem 0.75rem;
}

.exif-symbols-larger {
    font-size: 1.7rem;
    margin-left: 10px;
}

.exif-double {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.exif-data {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    font-size: 1rem;
}

.leaflet-container {
    height: 250px;
    width: 250px;
    border-radius: 50%;
    border: 2px solid rgba(0, 0, 0, 0.3);
    filter: grayscale(100%);
}

.tag {
    display: inline-block;
    color: rgba(0, 0, 0, 0.8);
    background-color: rgba(0, 0, 0, 0.1);
    margin: 2px;
    padding: 5px 8px;
    border-radius: 5px;
}

.tags-collection {
    padding: 5px;
}

